# EEG_changepoint

./: CMakeLists.txt  Est.cpp  README.md  main.cpp  sparsified.cpp
